otus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-luzhin-demo-service 
spec:
  selector:
    app: otus-luzhin-demo
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: LoadBalancer
