otus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/(.*)/(.*)
          pathType: Prefix
          backend:
            service:
              name: otus-luzhin-demo-service
              port: 
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: otus-luzhin-demo-service
              port: 
                number: 8000
